@@ -1,5 +1,8 @@
 2007-05-25 Hal Rosenstock <halr@voltaire.com>
 
+	* src/ibportstate.c: Handle peer ports at 1x that
+	  should be wider and 2.5 Gbps that should be faster
+
 	* src/ibportstate.c: Add LinkSpeed/Width related components
 	  to output
 
